fixed a syntax error in "about" section

--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,44 @@
 h1 {
     color:white;
+    background-image: url("earl-wilcox-y3W0CzO063w-unsplash-alt.jpg");
+    background-repeat: no-repeat;
+    background-position: top;
+    background-attachment: scroll;
 }
 
 h2 {
     color:white;
 }
 
-h3 {
-    color: black;
+body {
+    font-family: Segoe 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-h4 {
-    color: black;
+header {
+    color:white;
+    position:relative;
+    padding: 1rem;
 }
+
+nav a {
+    color: black;
+    font-size: medium;
+    text-decoration: underline;
+}
+
+nav ul {
+    list-style-type: none;
+    position: absolute;
+    top: 0.7rem;
+    left: 1rem;
+}
+
+nav li {
+    display: inline;
+    margin-right: 0.5rem;
+}
+
+
 
 *,
 *::before,
