--- a/styles.css
+++ b/styles.css
@@ -1,59 +1,110 @@
-h1 {
-    color:white;
-    background-image: url(/Users/elisabethellwanger/Desktop/devCodeCamp/Week10/eCommerce_Website/assets/earl-wilcox-y3W0CzO063w-unsplash-alt.jpg);
-    background-repeat: no-repeat;
-    background-position: top;
-    background-attachment: scroll;
-}
-
 
 body {
     font-family: Segoe 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-header {
-    color:white;
-    position:relative;
-    padding: 1rem;
-}
 
 nav a {
+    display: inline;
     color: black;
+    text-decoration: none;
     font-size: medium;
-    text-decoration: underline;
+    text-align: left;
 }
 
+
+header {
+    color:black;
+    background-color: white;
+    position:relative;
+    padding: 1rem;
+    border-bottom-style: solid;
+    text-align: center;
+    height: 60px;
+    width: 90%;
+}
+
+
 nav ul {
+    display: inline;
     list-style-type: none;
     position: absolute;
     top: 0.7rem;
-    left: 1rem;
+    left: 0.7rem;
+    font-size: small;
+    text-align: left;
 }
+
 
 nav li {
     display: inline;
     margin-right: 0.5rem;
+    text-align: left;
 }
+
 
 .home {
-    display:flex
-
+    color:white;
+    height: 20%;
+    position: absolute;
+    top: 90%;
+    right: 0%;
+    left: 0%;
+    bottom: 90%;
+    width: 100%;
+    text-align: center;
+    font-size: 18px;
 }
 
+.home h1 {
+    text-align: left;
+    font-size: 18px; 
+}
+
+.home h2 {
+    text-align: right;
+    font-size: 18px; 
+}
+
+
 .about {
-    display:flex
+    display:flex;
+    color: black;
+    position:initial;
+    width: 40%;
+    height: 200px;
+    font-size: 12px;
+    position: relative;
+    
 }
 
 .products {
-    display: grid
+    margin: 5px;
+    border: 1px solid #ccc;
+    float: left;
+    width: 180px;
+}
+
+.products:hover {
+    border: 1px solid #777;
+}
+  
+.products img {
+    width: 100%;
+    height: auto;
+}
+
+.products desc {
+    padding: 15px;
+    text-align: center;
 }
 
 .contact {
-    display: flex
+    display: flex;
 }
 
 footer {
-    display:flex
+    display:flex;
 }
 
 
